--- a/doc/source/sections/general.tex
+++ b/doc/source/sections/general.tex
@@ -39,6 +39,7 @@ At its center, the crossbar interconnect serves as a bus connection between all 
 The interconnect arbitrates three bus masters (the UART bridge and the core's data and instruction buses), where the UART bridge has priority over the other two.
 The remaining SoC modules are bus slaves.
 
+\newpage
 \section{Memory Map}\label{sec:memorymap}
 \begin{figure}[H]
     \centering
