--- a/doc/source/sections/interfaces.tex
+++ b/doc/source/sections/interfaces.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Interfaces}\label{sec:interfaces}
 \subsection{Memory Bus}\label{sec:membus}
 The EduSoC memory bus has the following signals:\\
